# FreeCAD

src/Mod/: CMakeLists.txt
src/Mod/AIAssistant/: AIAssistantCore.py  AIAssistantGui.py  CMakeLists.txt  Init.py  InitGui.py  README.md  TestAIAssistant.py
